--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
+version: '3.8'
+
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8020:8000"
-    volumes:
-      - .:/app
-    working_dir: /app
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        ports:
+            - "8020:8020"
+        volumes:
+            - .:/app
+        working_dir: /app
+        environment:
+            APP_ENV: local
+        depends_on:
+            - db
+
+    db:
+        image: nouchka/sqlite3:latest
+        volumes:
+            - ./database:/root/db
